Bugfix - scorecard styling alignment on mobile devices

--- a/src/components/scoreboard/styles.module.scss
+++ b/src/components/scoreboard/styles.module.scss
@@ -7,7 +7,7 @@
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   max-width: 45rem;
-  margin: 3rem auto;
+  margin: 1rem auto;
 }
 
 .scoreboard {
@@ -38,7 +38,6 @@
 @media (max-width: 768px) {
   .scoreboardContainer {
     padding: 5px 0 10px 0;
-    margin: 0.5em auto 0 auto;
 
     h2 {
       font-size: 1.2em;
